# PoolGate

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  observability.py  pyproject.toml  retry.py  utils.py
.github/workflows/: ci.yml  publish.yml
clients/: __init__.py  base.py  capabilities.py  chat_client.py  moderation_client.py  registry.py  structured_client.py  synthesis_client.py  tool_client.py  transcription_client.py
core/: config.py  logger_manager.py  path_config.py
examples/: async_chat.py  basic_chat.py  batch.py  custom_scheduling.py  custom_throttle.py  error_handling.py  gemini_basic_chat.py  gemini_structured_invoke.py  moderation.py  persistence.py  sessions.py  streaming.py  structured_output.py  synthesis.py  tool_calling.py  transcription.py
exceptions/: __init__.py  base.py  configuration.py  keys.py  output.py  persistence.py  rate_limit.py  request.py  response.py  throttle.py  transport.py
key_manager/: __init__.py  key_pool.py
llm_models/: __init__.py  allam_2_7b.py  base.py  canopylabs_orpheus_arabic_saudi.py  canopylabs_orpheus_v1_english.py  groq_compound.py  groq_compound_mini.py  llama_3_1_8b_instant.py  llama_3_3_70b_versatile.py  meta_llama_4_scout.py  meta_llama_prompt_guard_22m.py  meta_llama_prompt_guard_86m.py  openai_gpt_oss_120b.py  openai_gpt_oss_20b.py  openai_gpt_oss_safeguard_20b.py  qwen3_32b.py  qwen3_6_27b.py  whisper_large_v3.py  whisper_large_v3_turbo.py
poolgate/: __init__.py  utils.py
poolgate/capabilities/: __init__.py  chat.py  moderation.py  structured.py  synthesis.py  tools.py  transcription.py
poolgate/capabilities/gemini/: __init__.py  chat.py  structured.py  tools.py
poolgate/core/: __init__.py  config.py  gemini_config.py  logger.py  paths.py
poolgate/domain/models/: __init__.py  key.py  request.py  response.py  usage.py
poolgate/domain/ports/: __init__.py  provider.py  repository.py  scheduler.py  tracker.py
poolgate/exceptions/: __init__.py  base.py  configuration.py  keys.py  output.py  persistence.py  rate_limit.py  request.py  response.py  throttle.py  transport.py
poolgate/persistence/: __init__.py  session.py  snapshots.py
poolgate/pool/: __init__.py  key_pool.py  scheduler.py
poolgate/pool/strategies/: __init__.py  base.py  health_aware.py  least_used.py  priority_failover.py  round_robin.py  weighted.py
poolgate/providers/: __init__.py  base.py  registry.py
poolgate/providers/gemini/: __init__.py  capabilities.py  client.py  models.py
poolgate/providers/groq/: __init__.py  capabilities.py  client.py  models.py
poolgate/schemas/: __init__.py
poolgate/schemas/common/: __init__.py  context.py  envelope.py  keys.py  model_info.py  ops.py  runtime.py
poolgate/schemas/requests/: __init__.py  chat.py  moderation.py  structured.py  synthesis.py  tools.py  transcription.py
poolgate/schemas/responses/: __init__.py  chat.py  usage.py
poolgate/services/: __init__.py  gemini_provider.py  health.py  provider.py  retry.py
poolgate/throttling/: __init__.py  limiter.py  quota.py  sliding_window.py
poolgate/tracking/: __init__.py  account.py  manager.py  models.py  persistence.py  request.py  rolling_window.py  token.py  usage.py
poolgate_data/requests/: 2026-06-23.jsonl
poolgate_data/tracking/: account.json  tokens.json  usage.json
schedulers/: request_scheduler.py  scheduling_strategies.py
schemas/: __init__.py  chat.py  common.py  context.py  envelope.py  keys.py  model_info.py  moderation.py  ops.py  runtime.py  structured.py  synthesis.py  transcription.py  usage.py
scripts/: smoke_test.py
services/: __init__.py  health_service.py  persistence_service.py  provider_service.py  retry_service.py  session_service.py
tests/: conftest.py
tests/e2e/: conftest.py  test_full_request_lifecycle.py  test_moderation_lifecycle.py  test_multi_key_failover.py  test_persistence_lifecycle.py  test_rate_limit_handling.py  test_streaming_lifecycle.py  test_tool_calling_lifecycle.py
tests/fixtures/: __init__.py
tests/integration/: conftest.py  test_key_manager_integration.py  test_provider_service.py  test_provider_service_extended.py  test_retry_integration.py  test_scheduler_integration.py  test_tracking_integration.py
tests/integration/pool/: test_key_manager_integration.py  test_scheduler_integration.py
tests/integration/services/: test_provider_service.py  test_provider_service_extended.py  test_retry_integration.py
tests/integration/tracking/: test_tracking_integration.py
tests/mocks/: __init__.py
tests/providers/: conftest.py  test_chat_client.py  test_moderation_client.py  test_structured_client.py  test_synthesis_client.py  test_tool_client.py  test_transcription_client.py
tests/unit/: test_clients_base.py  test_clients_capabilities.py  test_clients_moderation.py  test_clients_registry.py  test_clients_structured.py  test_clients_synthesis.py  test_clients_tool.py  test_clients_transcription.py  test_config.py  test_exceptions.py  test_health_service.py  test_key_pool.py  test_llm_models.py  test_logger_manager.py  test_message_validation.py  test_observability.py  test_path_config.py  test_persistence.py  test_persistence_service.py  test_request_scheduler.py  test_retry.py  test_retry_service.py  test_scheduling_strategies.py  test_schemas.py  test_schemas_chat.py  test_schemas_envelope.py  test_schemas_synthesis.py  test_schemas_usage.py  test_session_service.py  test_throttling.py  test_tracking_account.py  test_tracking_manager.py  test_tracking_models.py  test_tracking_quota.py  test_tracking_request.py  test_tracking_rolling_window.py  test_tracking_token.py  test_tracking_usage.py  test_utils.py
tests/unit/capabilities/: conftest.py  test_chat.py  test_chat_extended.py  test_moderation.py  (+9 more)
throttling/: __init__.py  algorithms.py  config.py  layer1.py  layer2.py  middleware.py  types.py
tracking/: __init__.py  account_tracker.py  manager.py  models.py  persistence.py  quota_tracker.py  request_tracker.py  rolling_window.py  token_tracker.py  usage_tracker.py
(+31 files in other folders)
