[project]
name = "poolgate"
version = "0.1.1"
description = "Rate-aware API key pooling and orchestration for the Groq API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "groq>=1.4.0",
    "pydantic>=2.13.0",
    "python-dotenv>=1.2.2",
    "tenacity>=8.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "*/__pycache__/*", "examples/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["examples/", "scripts/"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["examples/", "scripts/", "tests/"]
