[project]
name = "poolgate"
version = "0.1.1"
description = "Rate-aware API key pooling and orchestration for the Groq API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "groq>=1.4.0",
    "pydantic>=2.13.0",
    "python-dotenv>=1.2.2",
    "tenacity>=8.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    "pytest-cov>=6.0.0",
    "black>=26.5.1",
    "pre-commit>=4.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "*/__pycache__/*", "examples/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.black]
line-length = 120
target-version = ["py310"]
extend-exclude = "(examples|scripts)/"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["examples/", "scripts/", "tests/"]
